Leitura e extração das informações na interface do usuário

--- a/ItemHelp - Editor/ItemHelp - Editor/ItemHelp - Editor.csproj
+++ b/ItemHelp - Editor/ItemHelp - Editor/ItemHelp - Editor.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BASE.cs" />
+    <Compile Include="MyExtension.cs" />
     <Compile Include="STRUCT_ITEMHELP.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
